--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -63,7 +63,7 @@
 
 .brandName {
     font-size: 1.5rem;
-    font-weight: 800;
+    font-weight: 700;
     color: #111827;
 }
 
@@ -187,6 +187,7 @@
     text-decoration: none;
     cursor: pointer;
     transition: all 0.2s;
+    color: #1e1e1e;
 }
 
 .userNameLink:hover {
