--- a/src/app/auth/login/page.module.css
+++ b/src/app/auth/login/page.module.css
@@ -17,12 +17,14 @@
 }
 
 .logo {
-    width: 1.5rem;
-    height: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 0.5rem;
+}
+
+.logo span img {
+    height: 1.5rem;
 }
 
 .logoText {
